k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teflon
  labels:
    app: teflon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teflon
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
        prometheus.io/path: "/metrics"
      labels:
        app: teflon
    spec:
      containers:
      - name: teflon
        image: stevemcquaid/falco-teflon:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
