k8s/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: teflon
spec:
  selector:
    app: teflon
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
